--- a/home/templates/home/base.html
+++ b/home/templates/home/base.html
@@ -265,7 +265,7 @@
                                 <h5 class="footer-title">Contact</h5>
                                 <ul>
                                     <li>+088 01912704287</li>
-                                    <li>Office23@gmail.com</li>
+                                    <li>ino@stellar-ai.in</li>
                                 </ul>
                             </div>
                             <div class="footer-social">
@@ -282,7 +282,7 @@
                                 <div class="footer-logo">
                                     <a href="{% url 'home:home' %}" class="h3 text-dark dez-page">Stellar Ai</a>
                                 </div>
-                                <p>1nd Floor, No.21, 80-feet Road, Cadarso 19 bis, loft 2 28008 Madrid (India)</p>
+                                <p>(India)</p>
                             </div>
                         </div>
                     </div>
