--- a/post/templates/post/social_base.html
+++ b/post/templates/post/social_base.html
@@ -21,6 +21,17 @@
     <!-- Core CSS -->
     <link rel="stylesheet" href="{% static 'social_assets/css/app.css' %}">
     <link rel="stylesheet" href="{% static 'social_assets/css/core.css' %}">
+
+    <style>
+        .hljs-type, .hljs-title, .hljs-section, .hljs-attribute, .hljs-quote, .hljs-built_in, .hljs-builtin-name{
+       color: #3f88e3;
+    }
+
+    .hljs-keyword, .hljs-selector-tag, .hljs-literal{
+      color: #f39200;
+    }
+    </style>
+
 </head>
 
 <body>
