--- a/home/templates/home/social_base.html
+++ b/home/templates/home/social_base.html
@@ -12,7 +12,7 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
 
     <title> Stellar AI</title>
-    <link rel="icon" type="image/png" href="{% static 'social_assets/img/favicon.png' %}" />
+    <link rel="icon" type="image/png" href="{% static 'images/logo/color-logo.png' %}" />
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Montserrat:600,700,800,900" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,500" rel="stylesheet">
