--- a/post/templates/post/feeds-js.html
+++ b/post/templates/post/feeds-js.html
@@ -524,9 +524,7 @@
             <div class="post-text">
 
                 ` + post.description + `
-                <div style="background-color: #f5f5f5;border-radius: 0.5em;padding: 0.5em;margin-top: 1em;"><pre><code>
-            ${post.code}
-            </code></pre></div>
+                <div style="background-color: #f5f5f5;border-radius: 0.5em;padding: 0.5em;margin-top: 1em;"><pre><code>${post.code}</code></pre></div>
             </div>
             <!-- Featured image -->
             <div class="post-image">
@@ -1180,9 +1178,7 @@
             <div class="post-text">
 
                 ` + post.description + `
-                <div style="background-color: #f5f5f5;border-radius: 0.5em;padding: 0.5em;margin-top: 1em;"><pre><code>
-            ${post.code}
-            </code></pre></div>
+                <div style="background-color: #f5f5f5;border-radius: 0.5em;padding: 0.5em;margin-top: 1em;"><pre><code>${post.code}</code></pre></div>
             </div>
             <!-- Featured image -->
             <div class="post-image">
