--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -46,7 +46,7 @@
                                         <i data-feather="message-circle"></i>
                                     </a>
                                 </div>
-                                <div class="pop-button is-right has-tooltip" data-placement="right" data-title="Send message">
+                                <div class="pop-button is-right has-tooltip" data-placement="right" data-title="Send email">
                                     <a href="mailto:{{profile_user.email}}" class="inner">
                                         <i data-feather="mail"></i>
                                     </a>
@@ -122,7 +122,7 @@
                             <div class="subheader-start is-hidden-mobile">
 <!--                                <span>{{connected_users.count}}</span>-->
 <!--                                <span>Friends</span>-->
-                                <a class="button has-icon is-bold">
+                                <a class="button is-solid has-icon is-bold" style="font-size: 14px;">
                                     <i class="mdi mdi-account-group"></i>
                                      &nbsp;&nbsp;&nbsp;{{connected_users.count}} Friends
                                 </a>
@@ -133,14 +133,12 @@
                             </div>
                             <div class="subheader-end is-hidden-mobile" style="display: flex; justify-content: end;">
                                 {% if profile_user not in request.user.get_user_connected_users and profile_user != request.user %}
-                                <form method="POST" onsubmit="sendFriendRequest(event)" action="">
-                                    {% csrf_token %}
-                                    <input type="hidden" name="id" value="{{profile_user.id}}">
-                                    <button type="submit" class="button has-icon is-bold menu-item" style="min-width: 130px;background: #5596e6;color: #fff;" data-content="education-content">
+
+                                    <a href="{% url 'user:send-user-request' profile_user.id %}" type="submit" class="button has-icon is-bold menu-item" style="min-width: 130px;background: #5596e6;color: #fff;" data-content="education-content">
                                         <i class="mdi mdi-send"></i>
                                         &nbsp;&nbsp;&nbsp;Send Request
-                                    </button>
-                                </form>
+                                    </a>
+
                                 {% elif profile_user == request.user %}
                                 <!-- If profile_user is request.user -->
                                 {% else %}
@@ -150,8 +148,8 @@
                                 </a>
                                 {% endif %}
                                 {% if form.designation.value %}
-                                <a class="button has-icon is-bold menu-item" style="min-width: 130px; margin-left: 20px;" data-content="education-content">
-                                    <i class="mdi mdi-progress-check"></i>
+                                <a class="button has-icon is-bold menu-item" style="min-width: 130px; margin-left: 20px;font-size: 14px;" data-content="education-content">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-briefcase"><rect x="2" y="7" width="20" height="14" rx="2" ry="2"></rect><path d="M16 21V5a2 2 0 0 0-2-2h-4a2 2 0 0 0-2 2v16"></path></svg>
                                       &nbsp;&nbsp;&nbsp;{{form.designation.value}}
                                 </a>
                                 {% endif %}
